<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="no_network">No Network</string>
    <string name="any_network">Any Network</string>
    <string name="wifi_network">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="overide_deadline">Overide Deadline:</string>
    <string name="not_set">Not Set</string>
</resources>
